# filewatch-organizer

./: README.md  pyproject.toml
src/filewatch_organizer/: __init__.py  cli.py  config.py  organizer.py  rules.py  tui.py  watcher.py
