[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filewatch-organizer"
version = "1.0.0"
description = "Lightweight File System Intelligent Monitoring & Auto-Organization Engine"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "FileWatch Team", email = "contact@filewatch.dev"}]
keywords = ["file", "watcher", "organizer", "automation", "cli", "filesystem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

[project.scripts]
filewatch-organizer = "filewatch_organizer.cli:main"
fwo = "filewatch_organizer.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/filewatch-organizer"
Documentation = "https://github.com/gitstq/filewatch-organizer#readme"
Repository = "https://github.com/gitstq/filewatch-organizer"
Issues = "https://github.com/gitstq/filewatch-organizer/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
